Portfolio Update September 2021

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <!-- Put here your site title -->
     <title>Kenneth Mae Verdida | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="earlyverdy, Kenneth, UI/UX Designer" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content=" Kenneth | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -35,13 +35,13 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Kenneth</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Developer you're looking for.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Hire Me</a
           >
         </p>
       </div>
@@ -60,7 +60,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/VerdidaProfile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -68,11 +68,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                A dedicated individual who is willing to face her fears in order to focus on expanding her skills and knowledge in software development and design.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Photography, filmmaking, and vector graphics illustration are three of my passions. I enjoy telling stories through my works. I really enjoy watching Korean dramas because it allows me to gain a better understanding of their culture.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -101,14 +100,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">OctoPy</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    OctoPy is an application that help children improve their reading proficiency.
                   </p>
                 </div>
                 <a
@@ -136,7 +131,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/OctoPy.jpg"
                     />
                   </div>
                 </a>
@@ -149,21 +144,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Spek</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A mobile application that aims to provide funding for rescued endangered species through featuring the wildlife's stories and entertaining its user with 3D virtual tour of the sanctuary and providing fun games for children.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/kaizerxcx/Spek"
                 >
                   See Live
                 </a>
@@ -171,7 +162,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/kaizerxcx/Spek"
                 >
                   Source Code
                 </a>
@@ -179,12 +170,12 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/kaizerxcx/Spek" target="_blank">
                   <div data-tilt class="thumbnail rounded js-tilt">
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/Spek.jpg"
                     />
                   </div>
                 </a>
@@ -197,21 +188,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">RoBust</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    RoBust is a web application that allows CIT – U passengers to select and reserve a bus seat by themselves. With this, the CIT – U passengers could reserve a seat without physically going to the IMDC office to check its availability. Aside from that, the application allows these CIT – U passengers to check the latest update on scheduled time departure of the bus, information and tickets in a particular day and time, allowing them to experience a convenient bus seat reservation ahead of time. The goal of this system is to reduce the conventional paper ticketing method and to provide a new way for bus ticketing via virtual process. However, this system is not limited to over-the-counter walk-in CIT – Upassengers.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/anne-rl/RoBust"
                 >
                   See Live
                 </a>
@@ -219,7 +206,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/anne-rl/RoBust"
                 >
                   Source Code
                 </a>
@@ -227,12 +214,12 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/anne-rl/RoBust" target="_blank">
                   <div data-tilt class="thumbnail rounded js-tilt">
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/RoBust.jpg"
                     />
                   </div>
                 </a>
@@ -250,13 +237,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text"></p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:kennethverds@gmail.com"
+            >Email me</a
           >
         </div>
       </div>
@@ -270,16 +257,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+<!--           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
+            <i class="fa fa-codepen fa-inverse"></i> -->
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/kennethverds/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/earlyverdy" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -293,29 +280,6 @@
             >Jacobo Martínez</a
           >
         </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
         </p>
       </div>
     </footer>
